--- a/identifying.html
+++ b/identifying.html
@@ -9,33 +9,34 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ultra&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <title>Yellow Journalism - More</title>
 </head>
 <body>
     <header>
         <nav>
             <div class="navbar">
-                <a href="index.html" class="homebtn">Home</a>
-                <a href="more.html" class="morebtn">More</a>
+                <a href="index.html" id="index-nav-button">About Yellow Journalism</a>
+                <a href="identifying.html" id="identify-nav-button">Identify Yellow Journalism</a>
             </div>
         </nav>
         <div class="hero-2">
-            <h1>Yellow Journalism</h1>
+            <h1>Identify Yellow Journalism</h1>
+            <p>How can you idenitfy yellow journalism and what can you do about it?</p>
         </div>
     </header>
     <main>
         <section class="content">
-            <div class="text-container-1">
-                <h2>What Can You Do?</h2>
-                <p>There is not much you can do about Yellow Journalism other than watching out and not getting fooled by it. Most yellow journalism today contains clickbait titles such as “Giant Asteroid Soon To Destroy Earth” only to later reveal in the article that the asteroid is hardly a threat. You should take your time and learn to recognize Yellow Journalism, watch out for bias and misinformation.
-                </p>
+            <div class="text-container-1" id="what-can-be-done">
+                <h2>What Can Be Done?</h2>
+                <p>There is not much that can actually be done about Yellow Journalism. It won't be going anywhere anytime soon, the media is at a constant war for clicks. The best you can do is look out for it and prevent yourself from being fooled. Most yellow journalism today contains clickbait titles that later reveal those titles to be innacruate. An article may contain a clickbait title like "Giant Asteroid Soon To Destroy Earth" just to reveal it only might hit earth in a couple of lightyears.</p>
             </div>
             <div class="image-container-1">
                 <img src="/images/asteroid-heading-towards-earth.jpg" alt="Asteroid heading towards the Earth.">
             </div>
-            <div class="text-container-2">
+            <div class="text-container-2" id="identifying-yellow-journalism">
                 <h2>Identifying Yellow Journalism?</h2>
-                <p>The ability to identify Yellow Journalism is an important skill to learn, so how can you do it? The first step is to stop believing everything you see, never assume a headline to be true no matter the source. Take your time to read the full story, search for the facts, and watch out for bias and potential misinformation.</p>
+                <p>The ability to identify Yellow Journalism can be a very important skill to learn, so how can you do it? The first step is to stop believing everything you see, you should <em>never</em> assume a headline to be true no matter what source it came from. Take your time to read the full story or article. You should search for the facts, and watch out for bias. This skill will prevent you from being potentially misinformed.</p>
             </div>
             <div class="image-container-2">
                 <img src="/images/maginifying-glass-pointing-on-book.jpg" alt="Magfiying glass pointing at the text in a book.">
