--- a/index.html
+++ b/index.html
@@ -9,39 +9,41 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ultra&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <title>Yellow Journalism - Home</title>
 </head>
 <body>
     <header>
         <nav>
             <div class="navbar">
-                <a href="index.html" class="homebtn">Home</a>
-                <a href="more.html" class="morebtn">More</a>
+                <a href="index.html" id="index-nav-button">About Yellow Journalism</a>
+                <a href="identifying.html" id="identify-nav-button">Identify Yellow Journalism</a>
             </div>
         </nav>
         <div class="hero-1">
-            <h1>Yellow Journalism</h1>
+            <h1>About Yellow Journalism</h1>
+            <p>What is yellow journalism, what is the history behind it, and what does it look like today?</p>
         </div>
     </header>
     <main>
         <section class="content">
-            <div class="text-container-1">
+            <div class="text-container-1" id="what-is-yellow-journaism">
                 <h2>What is Yellow Journalism?</h2>
-                <p>Yellow Journalism is an unprofessional and dishonest practice used by journalists and the media to get more people clicking and reading their articles. The technique first uses large, bold headlines and illustrations that can not be missed to attract the attention of as many people as possible. From there, the headline then uses over the top wording to get their audience hooked and reading. Typically the stories presented in these articles are very biased and far from the actual truth yet they seem to always fool so many people. Yellow Journalism is not just history, it still exists today more than ever before and it is important to know how you can identify it.</p>
+                <p>Yellow Journalism is an unprofessional and dishonest practice used by journalists and the media to get more people clicking and reading their articles. The technique first uses <span style="font-size: 110%;">large</span>, <strong>bold</strong> headlines and illustrations that can not be missed to attract the attention of as many people as possible. From there, the headline then uses over the top wording to get their audience hooked and reading. Typically the stories presented in these articles are very biased and far from the actual truth yet they seem to always fool so many people. Yellow Journalism is not just history, it is important to know <a href="identifying.html#identifying-yellow-journalism">how you can identify it</a> because it still exists today more than ever before.</p>
             </div>
             <div class="image-container-1">
                 <img src="/images/eggs-newspaper.png" alt="Newspaper with fake titles. (Yellow Journalism)">
             </div>
-            <div class="text-container-2">
-                <h2>The History of Yellow Journalism?</h2>
+            <div class="text-container-2" id="the-history-of-yellow-journalism">
+                <h2>The History of Yellow Journalism</h2>
                 <p>The term “Yellow Journalism” originated from the rivalry between two massive newspapers; Joseph Pulitzer's New York World and William Randolph Hearst's New York Journal. This rivalry resulted in false reporting from both newspapers and arguably caused an entire war between Spain and the United State. Both newspapers published biased articles claiming Spain had exploded and sunken a U.S. battleship, The Maine. These articles caused the American people to want war with Spain in Cuba and eventually resulted in the Spanish-American War in 1898. The Spanish-American War is just one example of how dangerous Yellow Journalism can be.</p>
             </div>
             <div class="image-container-2">
                 <img src="/images/spanish-american-war.jpg" alt="Naval battle between Spain and the United States of America during the Spanish-American War.">
             </div>
-            <div class="text-container-3">
+            <div class="text-container-3" id="modern-day-yellow-journalism">
                 <h2>Modern Day Yellow Journalism?</h2>
-                <p>There are many examples of modern day yellow journalism and it isn't too different from what it was years ago. The media often competes for the most clicks and not for the most accurate news. If you look at the news, you will notice lots of yellow journalism.</p>
+                <p>There are many examples of modern day yellow journalism and it isn't too different from what it was years ago. It may not have it's large yellow headings but the gist of it is still there. The media is focussed on getting more clicks than their competition, this often results in news stories being rushed, clickbait, biased and fakes news. You often see forms of yellow journalism in the news online and in newspapers displayed at store checkouts. Yellow journalism can come in all forms, it may even be as simple as a article with a clickbait title saying there is an massive asteroid is going to hit the Earth that later reveals in the article there is no asteroid even close to the Earth. Yellow journalism is easy to fall for and it happens often, knowing <a href="identifying.html#identifying-yellow-journalism">how you can identify it</a> can be an important skill to have, don't just assume headlines to be true.</p>
             </div>
             <div class="image-container-3">
                 <img src="/images/checkout-line.jpg" alt="Checkout line at a store with newspapers and articles on display.">
